# astgen

./: CHANGELOG.md  PLAN.org  astgen.cabal  hie.yaml  test.json
app/: Main.hs
src/: Convert.hs  Example.hs  JSON.hs  MyLib.hs  Name.hs  Native.hs  Render.hs  Syntax.hs
src/Language/JSON/: AST.hs
src/Syntax/: Kinds.hs  SFunctor.hs  STraversable.hs  Sum.hs  Token.hs  Unmarshal.hs
