cabal-version:      2.4
name:               astgen
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Patrick Thomson
maintainer:         patrickt@github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
                      JSON
                      Native
                      Render

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
                    , aeson
                    , fused-effects
                    , optics
                    , string-interpolate
                    , text
                    , text-builder-linear
                    , unordered-containers
                    , vector
    hs-source-dirs:   src
    default-language: Haskell2010

executable astgen
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        astgen

    hs-source-dirs:   app
    default-language: Haskell2010
